# XABSA

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
configs/: baseline.yaml  taxonomy.yaml  teacher.yaml
configs/experiments/: exp1_baseline_en.yaml  exp2_pseudo_added.yaml  exp3_filtering_ablation.yaml  exp4_contrastive.yaml  exp5_fewshot.yaml  ko_only.yaml
data/: README.md
scripts/: SCRIPTS.md  create_korean_data.py  download_semeval.py  eval.py  prepare_data.py  run_full_pipeline.py  run_teacher.py  train.py
src/: config.py  utils.py
src/data/: __init__.py  collator.py  dataset.py  korean_parser.py  semeval_parser.py  taxonomy.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  student.py
src/teacher/: __init__.py  base.py  claude_teacher.py  filter.py  gemini_teacher.py  mock_teacher.py  openai_teacher.py  prompts.py  validator.py
src/training/: __init__.py  trainer.py
