[project]
name = "xabsa"
version = "0.1.0"
description = "Cross-lingual Aspect-Based Sentiment Analysis"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "sentencepiece>=0.1.99",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

